# Redform

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
src/: exceptions.py
src/data_linter/: __init__.py  aliases.py  exceptions.py  logging.py
src/data_linter/contracts/: __init__.py  basemodel.py  column_contract.py  contract.py  dataset_contract.py  match_contract.py  memory_contract.py  metadata_contract.py  source_contract.py  target_contract.py
src/data_linter/inference/: __init__.py  csv_loader.py  json_loader.py  parquet_loader.py
src/data_linter/parsing/: __init__.py  json_parser.py  yaml_parser.py
src/data_linter/reporting/: __init__.py  schema_report.py
src/data_linter/utility/: collection_util.py  memory_estimator.py
src/data_linter/validation/: schema_validation.py
