[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
